# CommonGround

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md
.github/workflows/: docker-build.yaml
core/: env.sample  pyproject.toml  run_server.py
core/agent_core/events/: ingestors.py
core/agent_core/framework/: handover_service.py  inbox_processor.py  tool_registry.py  turn_manager.py
core/agent_core/iic/core/: event_handler.py
core/agent_core/llm/: call_llm.py
core/agent_core/nodes/: base_agent_node.py  base_tool_node.py
core/agent_core/nodes/custom_nodes/: __init__.py  dispatcher_node.py  launch_principal_tool.py
core/agent_core/services/: file_monitor.py
core/agent_profiles/llm_configs/: associate_llm.yaml  base_default_llm.yaml  fast_utils_llm.yaml  principal_llm.yaml
core/agent_profiles/profiles/: Associate_LocalRAG_EN.yaml  Associate_WebSearcher_Academic.yaml  Associate_WebSearcher_Business.yaml  Associate_WebSearcher_EN.yaml  Associate_WebSearcher_Technical.yaml  Base_Agent.yaml  Base_Associate_EN.yaml  Partner_StrategicAdvisor_EN.yaml  Principal_Planner_EN.yaml
core/api/: events.py  file_tag_dispatcher.py  message_handlers.py  pdf_agent.py  pdf_agent_service.py  server.py  session.py
core/tests/: test_file_tag_dispatcher.py  test_inbox_processor.py  test_pdf_agent.py  test_project_files.py
deployment/: docker-compose.api-key.yaml  docker-compose.proxy.yaml  docker-compose.yaml  tsconfig.json
docs/: project-files-todo.md
docs/framework/: 02-team-collaboration.md  (+1 more)
frontend/: package-lock.json  package.json  tailwind.config.ts
(+24 files in other folders)
